--- a/css/app.css
+++ b/css/app.css
@@ -34,10 +34,10 @@ h2 {
     font-weight: 300;
 }
 
+
 /*
  * Styles for the deck of cards
  */
-
 .deck {
     width: 660px;
     min-height: 680px;
@@ -84,24 +84,24 @@ h2 {
     font-size: 33px;
 }
 
+
 /*
  * Styles for the Score Panel
  */
-
 .score-panel {
     text-align: left;
-    width: 345px;
+    width: 500px;
     margin-bottom: 10px;
 }
 
-.score-panel .stars {
+.score-panel .stars, #stats_stars {
     margin: 0;
     padding: 0;
     display: inline-block;
-    margin: 0 5px 0 0;
+    margin: 0 30px 0 0;
 }
 
-.score-panel .stars li {
+.score-panel .stars li,  #stats_stars li {
     list-style: none;
     display: inline-block;
 }
@@ -110,30 +110,93 @@ h2 {
     float: right;
     cursor: pointer;
 }
+.restart span {
+    cursor: pointer;
+    padding: 5px 7px;
+    background-color: rgba(255, 100, 100, 0.4);
+    border-radius: 4px;
+    display: inline-block;
+    margin-top: 20px;
+}
 
 
-/*Add flexbox layout for the modal*/
-@media (max-width:600px) {
+/*
+* Styles for the modal - adapted from https://www.w3schools.com/w3css/w3css_references.asp#modal
+*/
+.w3-modal {
+    z-index: 3;
+    display: none;
+    padding-top: 100px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.w3-modal-content {
+    margin: auto;
+    background-color: #fff;
+    position: relative;
+    padding: 0;
+    outline: 0;
+    width: 600px;
+    border-radius: 5px;
+    padding: 20px;
+    text-align: center;
+}
+/*add flexbox responiveness for the modal*/
+@media (max-width: 600px) {
     .w3-modal-content {
-        margin:0 10px;
-        width:auto!important
+        margin: 0 10px;
+        width: auto;
     }
     .w3-modal {
-        padding-top:30px
+        padding-top: 30px;
     }
 }
 
-@media (max-width:768px) {
+@media (max-width: 768px) {
     .w3-modal-content {
-        width:500px
+        width: 500px;
     }
     .w3-modal {
-        padding-top:50px
+        padding-top:50px;
     }
 }
 
 @media (min-width:993px) {
     .w3-modal-content {
-        width:900px
+        width:900px;
     }
  }
+
+.w3-animate-opacity {
+    animation: opac 0.8s;
+}
+
+
+.w3-animate-zoom {
+    animation: animatezoom 0.6s;
+}
+
+
+.w3-button {
+    border: none;
+    display: inline-block;
+    padding: 8px 16px;
+    vertical-align: middle;
+    overflow: hidden;
+    text-decoration: none;
+    color: inherit;
+    background-color: inherit;
+    text-align: center;
+    cursor: pointer;
+    white-space: nowrap;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
